--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "element-ui": "^2.4.1",
+    "es6-promise": "^4.2.4",
     "mp-weui": "^1.0.3",
     "mpvue": "^1.0.11",
     "vue": "^2.5.16",
