--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "element-ui": "^2.4.1",
     "es6-promise": "^4.2.4",
     "js-md5": "^0.7.3",
     "mp-weui": "^1.0.3",
     "mpvue": "^1.0.11",
-    "vue": "^2.5.16",
-    "vuex": "^3.0.1"
+    "vue": "^2.5.16"
   },
   "devDependencies": {
     "mpvue-loader": "^1.0.13",
