--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "es6-promise": "^4.2.4",
     "js-md5": "^0.7.3",
+    "mint-ui": "^2.2.13",
     "mp-weui": "^1.0.3",
     "mpvue": "^1.0.11",
     "vue": "^2.5.16"
