--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-project",
+  "name": "lulu",
   "version": "1.0.0",
-  "description": "A Mpvue project",
+  "description": "shalulu",
   "author": "lirui",
   "private": true,
   "scripts": {
@@ -16,7 +16,7 @@
     "mint-ui": "^2.2.13",
     "mp-weui": "^1.0.3",
     "mpvue": "^1.0.11",
-    "vue": "^2.5.16"
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "mpvue-loader": "^1.0.13",
